--- a/dascy_backend/package.json
+++ b/dascy_backend/package.json
@@ -2,10 +2,10 @@
   "name": "dascy_backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
