--- a/dascy_frontend/package.json
+++ b/dascy_frontend/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
