--- a/dascy_frontend/package.json
+++ b/dascy_frontend/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chartjs-plugin-annotation": "^3.0.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
